# soulseek-rs

./: .env  .gitignore  Cargo.toml  README.md  justfile
.github/actions/rust-setup/: action.yml
.github/workflows/: audit.yml  ci.yml  clippy.yml  format.yml  test.yml
complexity-reduction/: REFACTORING_PLAN.md
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: search_and_download.rs
musicbrainz/: Cargo.toml
musicbrainz/examples/: lookup.rs
musicbrainz/src/: acoustid.rs  chromaprint.rs  error.rs  file_hash.rs  lib.rs  musicbrainz.rs
song-rs/: Cargo.toml
song-rs/examples/: search_and_download.rs
song-rs/src/: error.rs  lib.rs  parser.rs  ranker.rs  types.rs
soulseek-rs/: Cargo.toml
soulseek-rs/examples/: search_and_download.rs
soulseek-rs/src/: lib.rs  search_rate_limiter.rs  token.rs  types.rs
soulseek-rs/src/actor/: mod.rs  peer_registry.rs
soulseek-rs/src/client/: inner.rs  mod.rs  state_monitor.rs
soulseek-rs/src/peer/: listen.rs  mod.rs
src/: client.rs  dispatcher.rs  error.rs  lib.rs  types.rs
src/actor/: mod.rs  peer_actor.rs  peer_registry.rs  server_actor.rs
src/client/: connected_worker.rs  context.rs  inner.rs  mod.rs  operation.rs  settings.rs  state_monitor.rs
src/message/: handlers.rs  message_reader.rs  mod.rs
src/message/peer/: file_search_response.rs  get_share_file_list.rs  peer_init.rs  place_in_queue_response.rs  transfer_request.rs  transfer_response.rs  upload_failed.rs
src/message/server/: connect_to_peer.rs  (+11 more)
src/peer/: download_peer.rs  listen.rs  mod.rs
src/utils/: logger.rs
workflows/: cargo-shear.yml  ci.yml
(+6 files in other folders)
