[package]
name = "musicbrainz"
version.workspace = true
edition.workspace = true

[dependencies]
backon = "1.6.0"
governor = "0.6"
musicbrainz_rs = "0.12.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros"] }
which = "8"

[[example]]
name = "lookup"
required-features = []

[dev-dependencies]
clap = { version = "4", features = ["derive", "env"] }
