[package]
name = "song-rs"
version = "0.1.0"
edition = "2024"
description = "High-level music search library built on soulseek-rs"

[[example]]
name = "search_and_download"

[dependencies]
soulseek-rs-lib = { path = "../soulseek-rs" }
thiserror = "2.0.18"
unicode-normalization = "0.1.25"
tokio = { version = "1", features = ["full"] }
