[package]
name = "song-rs"
version = "0.1.0"
edition = "2024"
description = "High-level music search library built on soulseek-rs"

[features]
tracing = ["dep:tracing", "soulseek-rs-lib/tracing"]

[[example]]
name = "search_and_download"

[dependencies]
soulseek-rs-lib = { path = "../soulseek-rs" }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", optional = true }
unicode-normalization = "0.1.25"

[dev-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
